fix project name

--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,20 @@
 databases:
-  - name: kinds_worlddb
+  - name: kids_worlddb
     plan: free
-    databaseName: kinds_worldapp
+    databaseName: kids_worldapp
     user: admin
 
 services:
   - type: web
     plan: free
-    name: kinds_worldserver
+    name: kids_worldserver
     runtime: python
     buildCommand: './build.sh'
-    startCommand: 'python -m gunicorn kinds_world.asgi:application -k uvicorn.workers.UvicornWorker'
+    startCommand: 'python -m gunicorn kids_world.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: kinds_worlddb
+          name: kids_worlddb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
